Make plugin Java 8 compatible